<resources>
    <string name="app_name">ChuMeet</string>
    <!--APP歡迎頁面、註冊按鈕 -->
    <string name="btSignUp">SIGN UP</string>
    <string name="txv_1">We are what we do</string>
    <string name="btLogIn_0">ALREADY A MEMBER? LOG IN</string>
    <!--APP會員登入頁面、外部帳號登入-->
    <string name="btFB">Continue with Facebook</string>
    <string name="btGoogle">Continue with Google</string>
    <!--APP會員登入頁面、內部帳號登入-->
    <string name="btEmail">Continue with Email</string>
    <string name="editEmail">Email</string>
    <string name="editPassword">Password</string>
    <string name="btLogIn_1">Log In</string>
    <string name="btForgotPW">Forgot password?</string>
    <string name="txv_0">By tapping \"Continue\", you agree to our Terms of Service, Privacy Policy, and Cookie Policy.</string>
    <!--APP主頁面導覽列-->
    <string name="navFind">Find</string>
    <string name="navBrowse">Browse</string>
    <string name="navGoing">Going</string>
    <string name="navProfile">Profile</string>
    <!--內容：navFind上-->
    <string name="txv_2">Your groups and suggestions</string>
    <string name="txv_3">Explore by category</string>
    <string name="btYGS_0">Your groups only</string>
    <string name="btYGS_1">Saved</string>
    <!--內容：navFind下-->
    <string name="btEC_0">Art</string>
    <string name="btEC_1">Beauty</string>
    <string name="btEC_2">Beliefs</string>
    <string name="btEC_3">Board Games</string>
    <string name="btEC_4">Career</string>
    <string name="btEC_5">Crafts</string>
    <string name="btEC_6">Culture</string>
    <string name="btEC_7">Food and Drink</string>
    <string name="btEC_8">Government Arts</string>
    <string name="btEC_9">Health</string>
    <string name="btEC_10">moive</string>
    <string name="btEC_11">Music</string>
    <string name="btEC_12">Game</string>
    <string name="btEC_13">Online</string>
    <string name="btEC_14">Outdoors</string>
    <string name="btEC_15">Pets</string>
    <string name="btEC_16">Photography</string>
    <string name="btEC_17">Professional Activities</string>
    <string name="btEC_18">Reading Group</string>
    <string name="btEC_19">Shopping</string>
    <string name="btEC_20">Singing</string>
    <string name="btEC_21">Sports</string>
    <string name="btEC_22">Kids</string>
    <string name="btEC_23">Learning</string>
    <string name="btEC_24">Adventure</string>
    <string name="btEC_25">Social</string>
    <string name="btEC_26">Charity</string>
    <string name="btEC_27">Conference</string>
    <string name="btEC_28">Theater</string>
    <string name="btEC_29">ACG</string>
    <string name="btEC_30">Concert</string>
    <string name="btEC_31">Exhibition</string>
    <string name="btEC_32">Others</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txv_4">Explore</string>
    <string name="btSA">See All</string>
    <string name="txvActName">ActName</string>
    <string name="txvActIntro">ActIntro</string>
    <string name="txvActDate">ActDate</string>
    <!--msg-->
    <string name="navMessage">Message</string>
    <string name="msg_InvalidUserOrPassword">Email or password invalid</string>
    <string name="msg_InvalidCheckEmail">Email invalid</string>
    <string name="msg_CheckEmailOK">Email OK!!!</string>
    <string name="msg_CheckEmailRepeat">Email repeat</string>
    <string name="msg_SignUpInvalidEmail">Email invalid</string>
    <string name="msg_NoCameraApp">No camera app found</string>
    <string name="msg_SignUpInvalidName">Name invalid</string>
    <string name="msg_SignUpInvalidPassword">Password invalid</string>
    <string name="msg_SignUpInvalidConfirmPassword">Password invalid or not confirm </string>

    <string name="toolbar1">Profile</string>
    <string name="toolbar2">You\'re going</string>
    <string name="toolbar3">Messages</string>
    <string name="toolbar4">Find</string>
    <string name="toolbar5">Browse</string>
    <string name="stLogout">Log out</string>


    <!--Json-->
    <string name="msg_NoNetwork">No network connection available</string>
    <string name="msg_NoClubsFound">No clubs found</string>
    <string name="msg_NoActsFound">No acts found</string>
    <string name="btEditProfile">Edit Profile</string>


    <string name="col_Name">Name</string>
    <string name="col_Address">Address</string>
    <string name="editName">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="tvEmailCheck">Check Email</string>
    <string name="btSignUp2">Sign Up</string>
    <string name="menu_toolbar_insert">insert</string>
    <string name="title_activity_club_insert">ClubInsertActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_act_insert2">ActInsert2Activity</string>
    <string name="tvActInsertTab1">Give your Chumeet a name:</string>
    <string name="edActInsert_name">name</string>
    <string name="tvActInsertTab1_Location">Location</string>
    <string name="tvActIsertTab2_poi">category</string>
    <string name="ivTakepicture">TakePicture</string>
    <string name="icChuMeet">ChuMeet</string>
    <string name="btnPositioning">positioning</string>
    <string name="btnNext_actInsert">Next</string>
    <string name="btnFinal_createAct">create</string>


</resources>
